Confirmacao e refactoring de controllers
